<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Datalogger" Id="{553aee52-478d-4a43-bf26-ff3d8265591a}">
    <Declaration><![CDATA[TYPE Datalogger :
STRUCT
	MesAlarmCom					: BOOL ; 						(* (NA) Communication alarm *)
	MesAlarmCode				: WORD ; 						(* (NA) Internal Akuo Alarm Code				*)
	MesWarningCode				: WORD ; 						(* (NA) Internal Akuo Warning Code       	*)
	MesEventCode				: WORD ; 						(* (NA) Internal Akuo Event Code         	*)
	 
	MesCP_Read					: BOOL := TRUE; 						(* (NA) Permanent conditions for read		*)          

	MesCP_Write					: BOOL; 						(* (NA) Permanent conditions for read		*)    
                             						
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>