<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="Datalogger_SENECA" Id="{99879c2e-c939-4864-92e1-a7bb0ce30adb}">
    <Declaration><![CDATA[TYPE Datalogger_SENECA :
STRUCT
	
	MesData			: Datalogger ; 			  (* (NA) MesData *)
                        			                			                            	
	MesWindSp		: REAL ;				  (* (km/h) Wind speed of the weather station on SPP zone	 		*)
	MesWindDir		: REAL ;  				  (* (deg) Wind direction of the weather station on SPP zone	    *)
	 	 						
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>






